test/good/dictionaries/order01.px

print {'a': 3, 'c': 9, 'b': 2} + {'a': 5, 'x': 0} + {'b': 1}
