test/bad/dictionaries/op01.px

{5: 'x'} + {'x': 5}
